# PBench

./: .env.sample  .gitignore  EXPERIMENTS_README.md  HOW_TO_RUN.md  README.md  docker-compose.yml  flake.nix  init_databases.sh  prometheus.yml  pyproject.toml  requirements.txt  seed_tables.sh
databend-init/: 01-init-databases.sql  02-tpch-tables.sql  03-tpcds-tables.sql  04-imdb-tables.sql  05-sample-data.sql  clean_imdb_files.py  convert_tpcds_to_parquet.py  load_chunked.sh  load_imdb.sh  load_imdb_duckdb.py  load_imdb_firebolt.py  load_imdb_postgres.sh  load_sf20_databend.sh  load_tpcds_dbgen.sh  load_tpcds_duckdb.py  load_tpcds_firebolt.py  load_tpcds_postgres.sh  load_tpch100g.py  load_tpch100g_parquet.sh  load_tpch_dbgen.sh  load_tpch_duckdb.py  load_tpch_firebolt.py  load_tpch_postgres.sh  run_ddl.py  setup_tpcds_dsdgen.sh  setup_tpch_dbgen.sh
databend-init/firebolt-core/: compose.yaml  config.json  get-core.sh
experiments/: cab_to_mix.py  create_workload_csv.py  events_to_mix.py  find_telemetry_twins.py  injectivity_demo.py  recover_mix.py  run_ground_truth.py
experiments/mixes/: cab_stream3_5min.json  concurrent_stress.json  confusable.json  easy.json  hard.json  medium.json
experiments/results/: confusable_telemetry.json  easy_recovery.json  easy_telemetry.json  hard_recovery.json  hard_telemetry.json
groundtruth/: README.md  __init__.py  create_aggregate_trace.py  io_utils.py  run_bench.py  schema.py
groundtruth/adapters/: base.py  databend.py
groundtruth/configs/: databend_tpch_seq.yml  (+2 more)
sql_queries/: README.md  populate_redbench.py
(+191 files in other folders)
