[project]
name = "PBench"
version = "0.1.0"
description = "Workload synthesizer"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bayesian-optimization==1.4.3",
    "databend-driver>=0.33.4",
    "func-timeout==4.3.5",
    "numpy==1.26.1",
    "openai==1.58.1",
    "pandas==2.1.2",
    "pulp==2.8.0",
    "python-dotenv==1.0.0",
    "pyyaml==6.0.1",
    "requests==2.31.0",
    "scikit-learn==1.3.2",
    "simanneal==0.5.0",
    "torch>=2.0.1",
    "duckdb>=1.4.4"
]
